add pasta logos e cabeçalho

--- a/transito/templates/transito/partials/head.html
+++ b/transito/templates/transito/partials/head.html
@@ -15,9 +15,9 @@
     <header>
 
         <div id="container-img">
-            <img id="img-logo" src="" alt="Logo">
+            <img id="img-logo" src="{% static 'transito/logos/logo-transito.png' %}" alt="Logo">
             <div id="container-brasao">
-                <img id="img-brasao" src="" alt="Brasão">
+                <img id="img-brasao" src="{% static 'transito/logos/brasao1.png' %}" alt="Brasão">
                 <span>Prefeitura do <br> Município de Leme</span>
             </div>
         </div>
