add menu e notícias

--- a/transito/templates/transito/pages/home.html
+++ b/transito/templates/transito/pages/home.html
@@ -1,7 +1,52 @@
 {% include 'transito\partials\head.html' %}
 
 <body>
-    <h1>Trânsito</h1>
+    {% include 'transito\partials\slider.html' %}
+
+    <div id="container-menu">
+        <ul id="cont-lista-menu">
+            <li class="lista-menu"><a href="" class="link-menu">Multas</a></li>
+            <li class="lista-menu"><a href="" class="link-menu">Vagas Especiais</a></li>
+            <li class="lista-menu"><a href="" class="link-menu">Bicicletas</a></li>
+            <li class="lista-menu"><a href="" class="link-menu">Zona Azul</a></li>
+            <li class="lista-menu"><a href="" class="link-menu">Interdições</a></li>
+            <li class="lista-menu"><a href="" class="link-menu">Lombadas</a></li>
+            <li class="lista-menu"><a href="" class="link-menu">Sinalização</a></li>
+        </ul>
+    </div>
+
+    <!--NOTICIAS-->
+
+<h1 class="noticia">Notícias</h1>
+
+<section id="noticia">
+        <div class="noticia-text">
+            <div class="titulo-noticia">
+
+            </div>
+        </div>
+
+        <div class="noticia-text">
+            <div class="titulo-noticia">
+            
+            </div>
+        
+        </div>
+
+        <div class="noticia-text">
+            <div class="titulo-noticia">
+            
+            </div>
+        
+        </div>
+    </div>
+
+</section>
+<br>
+<br>
+<br>
+<!-- FIM NOTICIAS-->
+
     {% include 'transito\partials\footer.html' %}
 </body>
 
