--- a/transito/templates/transito/pages/servicos.html
+++ b/transito/templates/transito/pages/servicos.html
@@ -1,4 +1,6 @@
 {% include 'transito\partials\head.html' %}
+<body>
+    
 
 <div id="container-menu">
     <ul id="cont-lista-menu">
@@ -12,7 +14,26 @@
     </ul>
 </div>
 
-</body>
+<div id="servicos-content">
+    <p class="p-servicos">O Departamento de Trânsito é uma instituição essencial para a gestão eficiente e segura do tráfego nas vias públicas. Com o objetivo de garantir a mobilidade, prevenir acidentes e manter a ordem no trânsito, esse órgão desempenha um papel fundamental na vida dos cidadãos. Nele, é possível solicitar diversos serviços essenciais, tais como:</p>
+
+    <ul id="lista-servicos">
+        <li class="lista-servicos"><strong>Multas e Notificações:</strong>
+            O Departamento de Trânsito é responsável por aplicar as penalidades previstas no Código de Trânsito Brasileiro (CTB) aos condutores que cometem infrações. Por meio desse serviço, os cidadãos podem acessar informações sobre multas, verificar notificações e, se necessário, apresentar defesas e recursos para contestar as autuações.</li>
+
+        <li class="lista-servicos"><strong>Interdições de Vias:</strong>
+            Quando ocorrem situações que impeçam o trânsito seguro em determinada via, o Departamento de Trânsito é responsável por realizar a interdição temporária. Isso pode ocorrer em casos de acidentes graves, obras públicas, eventos ou qualquer outra circunstância que exija a suspensão momentânea do fluxo de veículos. A interdição é organizada de forma a causar o menor impacto possível na mobilidade urbana.</li>
+
+        <li class="lista-servicos"><strong>Lombadas e Sinalização:</strong>
+            A segurança viária é uma das principais preocupações do Departamento de Trânsito. Para isso, são instaladas lombadas e dispositivos de sinalização adequados para alertar os motoristas sobre locais de risco, travessias de pedestres e limites de velocidade. Essa sinalização é fundamental para conscientizar os condutores e prevenir acidentes.</li>
+
+        <li class="lista-servicos"><strong>Sinalização Semafórica:</strong>
+            Os semáforos são elementos cruciais para o controle do tráfego nas grandes cidades. O Departamento de Trânsito é responsável pela instalação, manutenção e programação desses equipamentos, visando a fluidez e a segurança nas vias.</li>
+
+        <li class="lista-servicos"><strong>Educação no Trânsito:</strong>
+            Além de prover serviços para o controle e organização do tráfego, o Departamento de Trânsito também atua na conscientização da população. Através de campanhas educativas, palestras e ações sociais, busca-se informar os cidadãos sobre a importância do respeito às leis de trânsito, a direção defensiva, o respeito aos pedestres e o uso correto dos equipamentos de segurança, como o cinto de segurança e capacete.</li>
+    </ul>
+</div>
 
 <br>
 <br>
@@ -24,33 +45,6 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
 {% include 'transito\partials\footer.html' %}
+</body>
