--- a/transito/templates/transito/pages/sobre.html
+++ b/transito/templates/transito/pages/sobre.html
@@ -6,13 +6,13 @@
     <p>Algumas das principais funções de um departamento de trânsito incluem:</p>
 
     <ul id="lista-funcao">
-        <li class="funcao-dep">Planejamento e gerenciamento da infraestrutura de transporte: O departamento de trânsito é responsável por planejar, projetar a mobilidade urbana.Também somos responsáveis pela manutenção dessas infraestruturas, garantindo que estejam em boas condições para uso.</li>
+        <li class="funcao-dep"><strong>Planejamento e gerenciamento da infraestrutura de transporte:</strong> O departamento de trânsito é responsável por planejar, projetar a mobilidade urbana.Também somos responsáveis pela manutenção dessas infraestruturas, garantindo que estejam em boas condições para uso.</li>
 
-        <li class="funcao-dep">Implementação de sinalização de trânsito: O departamento de trânsito é responsável por instalar e manter sinais de trânsito, semáforos e outras sinalizações que ajudam a controlar o tráfego e garantir a segurança dos usuários das vias.</li>
+        <li class="funcao-dep"><strong>Implementação de sinalização de trânsito:</strong> O departamento de trânsito é responsável por instalar e manter sinais de trânsito, semáforos e outras sinalizações que ajudam a controlar o tráfego e garantir a segurança dos usuários das vias.</li>
 
-        <li class="funcao-dep">Regulamentação do tráfego: O departamento de trânsito é responsável por aplicar leis de trânsito e regulamentações, como limites de velocidade, regras de estacionamento e restrições de tráfego. Eles também podem trabalhar com a polícia local para garantir que as leis de trânsito sejam cumpridas e penalizar aqueles que violarem as regras.</li>
+        <li class="funcao-dep"><strong>Regulamentação do tráfego:</strong> O departamento de trânsito é responsável por aplicar leis de trânsito e regulamentações, como limites de velocidade, regras de estacionamento e restrições de tráfego. Eles também podem trabalhar com a polícia local para garantir que as leis de trânsito sejam cumpridas e penalizar aqueles que violarem as regras.</li>
 
-        <li class="funcao-dep">Promoção de campanhas de segurança no trânsito: O departamento de trânsito pode promover campanhas de conscientização sobre segurança no trânsito, fornecendo informações aos motoristas e pedestres sobre como serem mais seguros na estrada. Essas campanhas podem incluir atividades como a distribuição de panfletos, a realização de palestras e a criação de anúncios de serviço público.</li>
+        <li class="funcao-dep"><strong>Promoção de campanhas de segurança no trânsito:</strong> O departamento de trânsito pode promover campanhas de conscientização sobre segurança no trânsito, fornecendo informações aos motoristas e pedestres sobre como serem mais seguros na estrada. Essas campanhas podem incluir atividades como a distribuição de panfletos, a realização de palestras e a criação de anúncios de serviço público.</li>
     </ul>
 
     <p class="txt-paragrafo">Em resumo, um departamento de trânsito é essencial para manter as vias públicas seguras e garantir a eficiência do transporte em uma cidade. Suas funções são amplas e variadas, mas todas têm o objetivo de melhorar a qualidade de vida dos cidadãos e promover o desenvolvimento sustentável.</p>
