--- a/transito/templates/transito/partials/head.html
+++ b/transito/templates/transito/partials/head.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{% static 'transito/css/contato.css' %}">
     <link rel="stylesheet" href="{% static 'transito/css/sobre.css' %}">
     <link rel="stylesheet" href="{% static 'transito/css/servicos.css' %}">
+    <link rel="stylesheet" href="{% static 'transito/css/multas.css' %}">
     <title>Trânsito Leme</title>
 </head>
 
