--- a/transito/templates/transito/pages/home.html
+++ b/transito/templates/transito/pages/home.html
@@ -5,7 +5,7 @@
 
     <div id="container-menu">
         <ul id="cont-lista-menu">
-            <li class="lista-menu"><a href="" class="link-menu">Multas</a></li>
+            <li class="lista-menu"><a href="{% url 'multas' %}" class="link-menu">Multas</a></li>
             <li class="lista-menu"><a href="" class="link-menu">Vagas Especiais</a></li>
             <li class="lista-menu"><a href="" class="link-menu">Bicicletas</a></li>
             <li class="lista-menu"><a href="" class="link-menu">Zona Azul</a></li>
