--- a/transito/templates/transito/partials/head.html
+++ b/transito/templates/transito/partials/head.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{% static 'transito/css/sobre.css' %}">
     <link rel="stylesheet" href="{% static 'transito/css/servicos.css' %}">
     <link rel="stylesheet" href="{% static 'transito/css/multas.css' %}">
+    <link rel="stylesheet" href="{% static 'transito/css/bicicletas.css' %}">
     <title>Trânsito Leme</title>
 </head>
 
