--- a/transito/templates/transito/partials/head.html
+++ b/transito/templates/transito/partials/head.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="{% static 'transito/css/multas.css' %}">
     <link rel="stylesheet" href="{% static 'transito/css/bicicletas.css' %}">
     <link rel="stylesheet" href="{% static 'transito/css/zona_azul.css' %}">
+    <link rel="stylesheet" href="{% static 'transito/css/interd.css' %}">
     <title>Trânsito Leme</title>
 </head>
 
