--- a/transito/templates/transito/pages/interd.html
+++ b/transito/templates/transito/pages/interd.html
@@ -1,5 +1,6 @@
 {% include 'transito\partials\head.html' %}
 
+<body>
 <h1>Interdições</h1>
 <div class="container-interdicao">
     <p class="txt-int-interd">Para solicitar a interdição é necessário preencher o <strong>Requerimento para Interdição de Via Pública.</strong></p>
