--- a/transito/templates/transito/pages/home.html
+++ b/transito/templates/transito/pages/home.html
@@ -10,7 +10,7 @@
             <li class="lista-menu"><a href="{% url 'bicicletas' %}" class="link-menu">Bicicletas</a></li>
             <li class="lista-menu"><a href="{% url 'zona_azul' %}" class="link-menu">Zona Azul</a></li>
             <li class="lista-menu"><a href="{% url 'interd' %}" class="link-menu">Interdições</a></li>
-            <li class="lista-menu"><a href="" class="link-menu">Lombadas</a></li>
+            <li class="lista-menu"><a href="{% url 'lombadas' %}" class="link-menu">Lombadas</a></li>
             <li class="lista-menu"><a href="" class="link-menu">Sinalização</a></li>
         </ul>
     </div>
