--- a/transito/templates/transito/pages/home.html
+++ b/transito/templates/transito/pages/home.html
@@ -11,7 +11,7 @@
             <li class="lista-menu"><a href="{% url 'zona_azul' %}" class="link-menu">Zona Azul</a></li>
             <li class="lista-menu"><a href="{% url 'interd' %}" class="link-menu">Interdições</a></li>
             <li class="lista-menu"><a href="{% url 'lombadas' %}" class="link-menu">Lombadas</a></li>
-            <li class="lista-menu"><a href="" class="link-menu">Sinalização</a></li>
+            <li class="lista-menu"><a href="{% url 'sinalizacao'%}" class="link-menu">Sinalização</a></li>
         </ul>
     </div>
 
