--- a/transito/templates/transito/partials/head.html
+++ b/transito/templates/transito/partials/head.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="{% static 'transito/css/zona_azul.css' %}">
     <link rel="stylesheet" href="{% static 'transito/css/interd.css' %}">
     <link rel="stylesheet" href="{% static 'transito/css/lombadas.css' %}">
+    <link rel="stylesheet" href="{% static 'transito/css/sinalizacoes.css' %}">
     <title>Trânsito Leme</title>
 </head>
 
