--- a/transito/templates/transito/pages/servicos.html
+++ b/transito/templates/transito/pages/servicos.html
@@ -4,13 +4,13 @@
 
 <div id="container-menu">
     <ul id="cont-lista-menu">
-        <li class="lista-menu"><a href="" class="link-menu">Multas</a></li>
+        <li class="lista-menu"><a href="{% url 'multas' %}" class="link-menu">Multas</a></li>
         <li class="lista-menu"><a href="" class="link-menu">Vagas Especiais</a></li>
-        <li class="lista-menu"><a href="" class="link-menu">Bicicletas</a></li>
-        <li class="lista-menu"><a href="" class="link-menu">Zona Azul</a></li>
-        <li class="lista-menu"><a href="" class="link-menu">Interdições</a></li>
-        <li class="lista-menu"><a href="" class="link-menu">Lombadas</a></li>
-        <li class="lista-menu"><a href="" class="link-menu">Sinalização</a></li>
+        <li class="lista-menu"><a href="{% url 'bicicletas' %}" class="link-menu">Bicicletas</a></li>
+        <li class="lista-menu"><a href="{% url 'zona_azul' %}" class="link-menu">Zona Azul</a></li>
+        <li class="lista-menu"><a href="{% url 'interd' %}" class="link-menu">Interdições</a></li>
+        <li class="lista-menu"><a href="{% url 'lombadas' %}" class="link-menu">Lombadas</a></li>
+        <li class="lista-menu"><a href="{% url 'sinalizacao' %}" class="link-menu">Sinalização</a></li>
     </ul>
 </div>
 
