css cartao idoso

--- a/transito/templates/transito/pages/cartaoidoso.html
+++ b/transito/templates/transito/pages/cartaoidoso.html
@@ -1,8 +1,10 @@
-<!--CARTÃO IDOSO-->
+{% include 'transito\partials\head.html' %}
 
+<!--CARTÃO IDOSO-->
 <h1>Cartão do Idoso</h1>
 <p class="p-info">Preencha o formulário, e assim que o cartão estiver pronto, será feito contato para agendamento da retirada do cartão.</p>
 
+<main>
 <form action="">
 
     <!--PRIMEIRA-->
@@ -252,9 +254,6 @@
 
 
 </div>
-
-
-
-</form>
-
+</main>
+{% include 'transito\partials\footer.html' %}
 <!--FIM CARTÃO IDOSO-->
