--- a/transito/templates/transito/partials/head.html
+++ b/transito/templates/transito/partials/head.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="{% static 'transito/css/interd.css' %}">
     <link rel="stylesheet" href="{% static 'transito/css/lombadas.css' %}">
     <link rel="stylesheet" href="{% static 'transito/css/sinalizacoes.css' %}">
+    <link rel="stylesheet" href="{% static 'transito/css/cartaoidoso.css' %}">
     <title>Trânsito Leme</title>
 </head>
 
