ad vagas especiais

--- a/transito/templates/transito/pages/contato.html
+++ b/transito/templates/transito/pages/contato.html
@@ -11,17 +11,17 @@
 
                 <div class="lbl-inp">
                     <label for="nome">Nome completo:</label>
-                    <input type="text">
+                    <input class="inp-dados" type="text">
                 </div>
                 
                 <div class="lbl-inp">
                     <label for="email">E-mail:</label>
-                    <input type="text">
+                    <input  class="inp-dados" type="text">
                 </div>
             
                 <div class="lbl-inp">
                     <label for="fone">Telefone:</label>
-                    <input type="text">
+                    <input  class="inp-dados" type="text">
                 </div>
 
             </div>
