--- a/transito/templates/transito/pages/home.html
+++ b/transito/templates/transito/pages/home.html
@@ -6,7 +6,7 @@
     <div id="container-menu">
         <ul id="cont-lista-menu">
             <li class="lista-menu"><a href="{% url 'multas' %}" class="link-menu">Multas</a></li>
-            <li class="lista-menu"><a href="" class="link-menu">Vagas Especiais</a></li>
+            <li class="lista-menu"><a href="{% url 'vagas_especiais' %}" class="link-menu">Vagas Especiais</a></li>
             <li class="lista-menu"><a href="{% url 'bicicletas' %}" class="link-menu">Bicicletas</a></li>
             <li class="lista-menu"><a href="{% url 'zona_azul' %}" class="link-menu">Zona Azul</a></li>
             <li class="lista-menu"><a href="{% url 'interd' %}" class="link-menu">Interdições</a></li>
