add cartap pessoa c/ def

--- a/transito/templates/transito/partials/head.html
+++ b/transito/templates/transito/partials/head.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="{% static 'transito/css/sinalizacoes.css' %}">
     <link rel="stylesheet" href="{% static 'transito/css/vagas_especiais.css' %}">
     <link rel="stylesheet" href="{% static 'transito/css/cartaoidoso.css' %}">
+    <link rel="stylesheet" href="{% static 'transito/css/cartaodef.css' %}">
     <title>Trânsito Leme</title>
 </head>
 
