--- a/transito/templates/transito/pages/cartaoidoso.html
+++ b/transito/templates/transito/pages/cartaoidoso.html
@@ -110,7 +110,7 @@
             <form action="">
                 <input type="file" id="upload1" accept=".jpg,.png,.pdf" hidden>
                 <label for="upload1" class="uploadlabel">
-                <span><img class="cloud" src="/icones/cloud-computing64.png" alt=""></span>
+                <span><img class="cloud" src="{% static 'transito/imagens/cloud-computing64.png' %}" alt=""></span>
                 <p>Click aqui para carregar o arquivo</p>
                 </label>
             </form>
@@ -219,7 +219,7 @@
             <form action="">
                 <input type="file" id="upload2" accept=".jpg,.png,.doc,.pdf" hidden>
                 <label for="upload2" class="uploadlabel">
-                <span><img class="cloud" src="/icones/cloud-computing64.png" alt=""></span>
+                <span><img class="cloud" src="{% static 'transito/imagens/cloud-computing64.png' %}" alt=""></span>
                 <p>Click aqui para carregar o arquivo</p>
             </label>
             </form>
