--- a/transito/templates/transito/partials/footer.html
+++ b/transito/templates/transito/partials/footer.html
@@ -1,6 +1,8 @@
+{% load static %}
+
 <footer>
     <div id="cont-coordenadoria">
-        <img id="img-foot" src="/logos/logo-box.png" alt="">
+        <img id="img-foot" src="{% static 'transito/logos/logo-box.png' %}" alt="">
         <p id="txt-coordenadoria">Coordenadoria Municipal de Trânsito <br> Secretaria de Segurança, Trânsito, Cidadania e Defesa Civil</p>
     </div>
     <div class="cont-infofoot">
