--- a/transito/templates/transito/partials/slider.html
+++ b/transito/templates/transito/partials/slider.html
@@ -13,19 +13,19 @@
 
     <!--SLIDERS-->
         <div class="slide first">
-            <img class="img-car" src="/imagen/cor01.png" alt="Imagem1">
+            <img class="img-car" src="{% static 'transito/imagens/cor01.png' %}" alt="Imagem1">
         </div>
 
         <div class="slide">
-            <img class="img-car" src="/imagen/cor02.png" alt="Imagem2">
+            <img class="img-car" src="{% static 'transito/imagens/cor02.png' %}" alt="Imagem2">
         </div>
 
         <div class="slide">
-            <img class="img-car" src="/imagen/cor03.png" alt="Imagem3">
+            <img class="img-car" src="{% static 'transito/imagens/cor03.png' %}" alt="Imagem3">
         </div>
 
         <div class="slide">
-            <img class="img-car" src="/imagen/cor04.png" alt="Imagem4">
+            <img class="img-car" src="{% static 'transito/imagens/cor04.png' %}" alt="Imagem4">
         </div>
 
     <!--FINAL SLIDERS-->
