add cartao idoso

--- a/transito/templates/transito/pages/vagas_especiais.html
+++ b/transito/templates/transito/pages/vagas_especiais.html
@@ -4,7 +4,7 @@
     <h1>Cartão Idoso</h1>
     <p class="cont-text">O Cartão de Estacionamento para Idoso é um documento essencial que concede benefícios aos cidadãos idosos. Emitido por órgãos de trânsito, permite estacionar em vagas especiais próximas a locais de grande circulação. Além da comodidade, promove a inclusão social, facilita o acesso a estabelecimentos e aumenta a segurança. Essa iniciativa valoriza a autonomia dos idosos, incentivando sua independência e vida ativa. É crucial que as vagas sejam corretamente sinalizadas e fiscalizadas para garantir o cumprimento adequado do benefício. Respeitar e valorizar essa medida é reconhecer a contribuição e experiência dos idosos na sociedade.</p>
 
-    <button class="btn-card"><a class="link-card" href="{% url 'cartaoidoso' %}">Clique aqui para solicitar</a></button>
+    <button class="btn-card"><a class="link-card" href="{% url 'cartao_idoso' %}">Clique aqui para solicitar</a></button>
 
 </div>
 
