--- a/transito/templates/transito/pages/cartao_idoso.html
+++ b/transito/templates/transito/pages/cartao_idoso.html
@@ -4,6 +4,7 @@
     <h1>Cartão do Idoso</h1>
 
     <!--PRIMEIRA-->
+    <main>
         <div class="cont-info">
             <section class="info-idoso">
                 <h2>Dados do Idoso</h2>
@@ -271,7 +272,7 @@
             <button class="btn-env" type="submit" id="enviar">ENVIAR</button>
             <button class="btn-limp" type="reset" id="limpar">LIMPAR</button>
         </div>
-    </form>
+    </main>
 
 
     <!--FIM CARTÃO IDOSO-->
