--- a/transito/templates/transito/pages/cartao_idoso.html
+++ b/transito/templates/transito/pages/cartao_idoso.html
@@ -62,7 +62,7 @@
                 <h2>Endereço</h2>
                 <div class="cont-end">
                     <label for="cep">CEP:</label>
-                    <input type="text" class="box-cep" name="cep" id="cep_idoso" maxlength="8">
+                    <input type="text" class="box-cep" name="cep" id="cep_idoso" maxlength="8" placeholder="Digite o número do CEP aqui e aperte a tecla TAB">
                 </div>
 
                 <div class="cont-end">
@@ -186,7 +186,7 @@
                     <form action="">
                         <div class="info-cep-rep">
                             <label for="cep">CEP:</label>
-                            <input type="text" name="cep_rep" id="cep_rep" maxlength="8">
+                            <input type="text" name="cep_rep" id="cep_rep" maxlength="8" placeholder="Digite o número do CEP aqui e aperte a tecla TAB">
                         </div>
                         <div class="info-cep-rep">
                             <label for="cep">Rua:</label>
