--- a/transito/static/transito/css/cartao_idoso.css
+++ b/transito/static/transito/css/cartao_idoso.css
@@ -328,3 +328,31 @@ input {
 }
 
 /*FIM FORM REPRESENTANTE*/
+
+.container-btn {
+    text-align: center;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+button {
+    width: 150px;
+    height: 40px;
+    font-size: 1.2rem;
+    border-radius: 5px;
+    margin-left: 20px;
+    border: 3px solid transparent;
+    cursor: pointer;
+}
+
+.btn-env {
+    background-color: #ffc118;
+}
+
+.btn-limp {
+    background-color: #a5a5a5;
+}
+
+button:hover {
+    border: 3px solid #1A1A1B;
+}
