--- a/transito/templates/transito/pages/cartao_idoso.html
+++ b/transito/templates/transito/pages/cartao_idoso.html
@@ -268,7 +268,7 @@
                 </div>
             </ul>
         </div>
-        <div class="cont-btn">
+        <div class="container-btn">
             <button class="btn-env" type="submit" id="enviar">ENVIAR</button>
             <button class="btn-limp" type="reset" id="limpar">LIMPAR</button>
         </div>
